--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -383,8 +383,7 @@
         <section class="contact-info">
             <h2>10. Contact Us</h2>
             <p>If you have any questions or concerns about this Privacy Policy or our privacy practices, please contact us at:</p>
-            <p><strong>Email:</strong> privacy@anayaqrscanner.com<br>
-            <strong>Website:</strong> www.anayaqrscanner.com</p>
+            <p><strong>Email:</strong> Anayakhan6193172@gmail.com<br>
         </section>
 
         <section>
